unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Scheme__c</fullName>
        <label>Scheme</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMBIT UDYAM - 100 DAYS VARIANT</fullName>
                </value>
                <value>
                    <fullName>AMBIT UDYAM - AVERAGE BANK BALANCE (ABB)</fullName>
                </value>
                <value>
                    <fullName>AMBIT UDYAM - GST UDYAM</fullName>
                </value>
                <value>
                    <fullName>AMBIT UDYAM - INCOME BASED</fullName>
                </value>
                <value>
                    <fullName>AMBIT UDYAM - LIP ASSESSMENT</fullName>
                </value>
                <value>
                    <fullName>AMBIT UDYAM - COVID LINE OF CREDIT</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - LIP Program</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - BANKING SURROGATE</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - GST VYAPAR LOAN</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - INCOME BASED</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - LAP AGAINST MULTI TENANTED PROPERTIES</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - MICRO LAP</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - TOP-UP LOANS FOR EXISTING CUSTOMERS</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - COVID LINE OF CREDIT</fullName>
                </value>
                <value>
                    <fullName>AMBIT VYAPAR - TATKAL VYAPAR</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - DELHI</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - INDORE</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - JAIPUR</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - KALYAN</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - AHMEDABAD</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - RAJKOT</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - LUDHIANA</fullName>
                </value>
                <value>
                    <fullName>MICROLAP - NASHIK</fullName>
                </value>
                <value>
                    <fullName>NIP in Perfect Collateral</fullName>
                </value>
                <value>
                    <fullName>NIP in Imperfect Collateral</fullName>
                </value>
                <value>
                    <fullName>Goods Segment UCV</fullName>
                </value>
                <value>
                    <fullName>Passenger Segment UCV</fullName>
                </value>
                <value>
                    <fullName>Assessed Income Program</fullName>
                </value>
                <value>
                    <fullName>Income Based Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Service Location)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sourcing_Channel__c</fullName>
        <label>Sourcing Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourcing_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sourcing Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Sourcing Location)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sourcing_Team__c</fullName>
        <label>Sourcing Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Destination__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Mailing__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open - Lead</fullName>
                </value>
                <value>
                    <fullName>Appointment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Appointment Re-schdeduled</fullName>
                </value>
                <value>
                    <fullName>CIBIL Updated</fullName>
                </value>
                <value>
                    <fullName>Under Qualification process</fullName>
                </value>
                <value>
                    <fullName>Documentation in process</fullName>
                </value>
                <value>
                    <fullName>Sales Team Qualified</fullName>
                </value>
                <value>
                    <fullName>SM Queue</fullName>
                </value>
                <value>
                    <fullName>Sales Co-ordinator Queue</fullName>
                </value>
                <value>
                    <fullName>BM Queue</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Contactable</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Converted</fullName>
                    <isActive>false</isActive>
                    <label>Converted</label>
                </value>
                <value>
                    <fullName>Document Processing</fullName>
                    <isActive>false</isActive>
                    <label>Document Processing</label>
                </value>
                <value>
                    <fullName>Document Verification</fullName>
                    <isActive>false</isActive>
                    <label>Document Verification</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                    <isActive>false</isActive>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                    <isActive>false</isActive>
                    <label>Qualification</label>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Qualified</label>
                </value>
                <value>
                    <fullName>Quote Sent</fullName>
                    <isActive>false</isActive>
                    <label>Quote Sent</label>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                    <isActive>false</isActive>
                    <label>Underwriting</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                    <isActive>false</isActive>
                    <label>Working</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Channel_Type__c</fullName>
        <label>Sub Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Direct Sourcing</fullName>
                </value>
                <value>
                    <fullName>Direct Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Used CV Broker</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
                <value>
                    <fullName>FLDG DSA</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status_If_Other__c</fullName>
        <inlineHelpText>If Sub Status is Others, please specify</inlineHelpText>
        <label>Sub Status, If Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Policy norms not met</fullName>
                </value>
                <value>
                    <fullName>Property not doable</fullName>
                </value>
                <value>
                    <fullName>Property in negative area</fullName>
                </value>
                <value>
                    <fullName>Negative Profile</fullName>
                </value>
                <value>
                    <fullName>Poor Banking</fullName>
                </value>
                <value>
                    <fullName>Poor RTR</fullName>
                </value>
                <value>
                    <fullName>Poor CIBIL</fullName>
                </value>
                <value>
                    <fullName>Customer not providing documentation</fullName>
                </value>
                <value>
                    <fullName>Rate of Interest Issue</fullName>
                </value>
                <value>
                    <fullName>Loan Amount Issue</fullName>
                </value>
                <value>
                    <fullName>Customer frequently rescheduling the appointment</fullName>
                </value>
                <value>
                    <fullName>Customer not disclosing the reason</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Customer disconnecting call</fullName>
                </value>
                <value>
                    <fullName>Not picking up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure_In_Months__c</fullName>
        <label>Tenure (In Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_At_Address_In_Years__c</fullName>
        <label>Time At Address (In Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Cross_Sell__c</fullName>
        <label>Type of Cross Sell</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yes_With_Deviation_Reason__c</fullName>
        <inlineHelpText>If with deviation, kindly provide justification</inlineHelpText>
        <label>Yes - With Deviation Reason</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Applicant_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Applicants</label>
    </listViews>
    <listViews>
        <fullName>Individual_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Status__c</columns>
        <columns>Rate_Of_Interest__c</columns>
        <columns>Product__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Constitution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Individual</value>
        </filters>
        <label>Individual Contacts</label>
    </listViews>
    <listViews>
        <fullName>Non_Individual_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Organisation_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>Rate_Of_Interest__c</columns>
        <columns>Loan_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Non_Individual</value>
        </filters>
        <label>Non Individual Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Individual</fullName>
        <active>true</active>
        <label>Non Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agent_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Channel__c, &apos;DSA Manager&apos;) &amp;&amp;
ISBLANK(Agent__c)</errorConditionFormula>
        <errorDisplayField>Agent__c</errorDisplayField>
        <errorMessage>Please select agent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Vintage_as_per_policy</fullName>
        <active>true</active>
        <description>Business Vintage as per policy if no</description>
        <errorConditionFormula>ISPICKVAL( Business_Vintage__c , &apos;No&apos;)&amp;&amp; ISBLANK( Business_Vintage_as_per_policy_Remarks__c )</errorConditionFormula>
        <errorDisplayField>Business_Vintage_as_per_policy_Remarks__c</errorDisplayField>
        <errorMessage>Business Vintage as per policy remarks is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CIBIL_Score_Eligibility_remarks</fullName>
        <active>true</active>
        <errorConditionFormula>CIBIL_Score_Eligibility_Remarks__c=&apos;Non-Eligible&apos;&amp;&amp;  ISBLANK(CIBIL_Score_Eligibility_Remarks__c )</errorConditionFormula>
        <errorDisplayField>CIBIL_Score_Eligibility_Remarks__c</errorDisplayField>
        <errorMessage>CIBIL Score Eligibility Remarks Is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CIBIL_Trigger_stage_for_Individual</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
AND (
ISPICKVAL(Status__c ,&quot;CIBIL Updated&quot;), RecordType.Name=&quot;Individual&quot;
),
ISBLANK(TEXT( Gender__c))|| ISBLANK( Birthdate )||
ISBLANK( Flat_House_Number_Destination__c )|| ISBLANK( Flat_House_Number_Mailing__c )|| ISBLANK( Building_Street_Name_Mailing__c )|| ISBLANK( Building_Street_Name_Destination__c )|| ISBLANK( Area_Destination__c )|| ISBLANK( Area_Mailing__c )|| ISBLANK( District_Mailing__c )|| ISBLANK( District_Destination__c ) || ISBLANK( State_Mailing__c ) || ISBLANK( State_Destination__c ) || ISBLANK( City_Mailing__c ) || ISBLANK( City_Destination__c ) || ISBLANK( Pincode_Mailing__c ) || ISBLANK( Pincode_Destination__c )|| ISBLANK( Loan_Amount__c ) ||
ISBLANK(TEXT( Product__c ))|| ISBLANK(TEXT( Scheme__c ))|| ISBLANK(TEXT( Purpose__c ))|| ISBLANK( Rate_Of_Interest__c ) ||
ISBLANK(TEXT( Customer_Type__c )) || ISBLANK( Tenure_In_Months__c ) || ISBLANK(TEXT( Nature_of_Loan__c )) || ISBLANK(TEXT( Occupancy_Status__c ))|| ISBLANK(TEXT(CIBIL_ID__c))||ISBLANK(CIBIL_ID_Number__c)|| NOT( Form_60_Uploaded__c )|| ISBLANK( Branch__c )
)</errorConditionFormula>
        <errorMessage>1.Applicant Information - Gender, Date of Birth
2.Address - all the fields except for landmark
3.Loan Specific details - all the fields except for Authorised Person,Company Name
4.CIBIL section all the fields except for OK to Proceed
5.Branch name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CIN_No_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Constitution__c,&quot;Private Limited&quot;) ||
ISPICKVAL(Constitution__c,&quot;LLP&quot;) ||
ISPICKVAL(Constitution__c,&quot;Public Limited&quot;)) &amp;&amp;
ISBLANK(CIN_Number__c)</errorConditionFormula>
        <errorDisplayField>CIN_Number__c</errorDisplayField>
        <errorMessage>Please provide CIN No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employee_Code_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Sub_Channel_Type__c,&quot;Employee Referral&quot;) &amp;&amp;
ISBLANK(Employee_Code__c)</errorConditionFormula>
        <errorDisplayField>Employee_Code__c</errorDisplayField>
        <errorMessage>Please enter Employee Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Business_Type_Remarks</fullName>
        <active>true</active>
        <description>customer should not be HUF for secured,unsecured,ucv</description>
        <errorConditionFormula>ISPICKVAL( Business_Type__c , &apos;HUF&apos;) &amp;&amp;  ISBLANK(Business_Type_Remark__c  )</errorConditionFormula>
        <errorDisplayField>Business_Type_Remark__c</errorDisplayField>
        <errorMessage>Business Type Remark is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Age_Norm_Eligibility_Remarks</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK( Birthdate ) &amp;&amp; Age_Norm_Eligibility__c=&apos;Non-Eligible&apos; &amp;&amp; ISBLANK( Age_Norm_Eligibility_Remarks__c )</errorConditionFormula>
        <errorDisplayField>Age_Norm_Eligibility_Remarks__c</errorDisplayField>
        <errorMessage>Age Norm Eligibility Remarks Is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Negative_property_address_Remarks</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Belongs_to_negative_property_address__c , &apos;Yes&apos;)&amp;&amp;  ISBLANK( Negative_property_address_Remarks__c )</errorConditionFormula>
        <errorMessage>Negative property address Remarks  Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_RTR_Norms_Remarks</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( RTR_Norm_Eligibility__c , &apos;No&apos;)&amp;&amp;  ISBLANK( RTR_Norms_Remarks__c )</errorConditionFormula>
        <errorDisplayField>RTR_Norms_Remarks__c</errorDisplayField>
        <errorMessage>RTR Norms Remarks is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Sub_Status_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Sub_Status__c,&apos;Other&apos;) &amp;&amp;
ISBLANK(Sub_Status_If_Other__c)</errorConditionFormula>
        <errorDisplayField>Sub_Status_If_Other__c</errorDisplayField>
        <errorMessage>Please provide a Sub Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAN_No_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(KYC_Details__c,&apos;PAN Card&apos;) &amp;&amp;
ISBLANK(PAN_Number__c)</errorConditionFormula>
        <errorDisplayField>PAN_Number__c</errorDisplayField>
        <errorMessage>Please enter PAN Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Cross_Sell_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Cross_Sell__c,&quot;Yes&quot;) &amp;&amp;
ISBLANK(Type_of_Cross_Sell__c)</errorConditionFormula>
        <errorDisplayField>Type_of_Cross_Sell__c</errorDisplayField>
        <errorMessage>Please enter Type of Cross sell</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>With_Deviation_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(OK_to_Proceed__c,&apos;Yes - With Deviation&apos;) &amp;&amp;
ISBLANK(Yes_With_Deviation_Reason__c)</errorConditionFormula>
        <errorDisplayField>Yes_With_Deviation_Reason__c</errorDisplayField>
        <errorMessage>Please provide Deviation Reason</errorMessage>
    </validationRules>
</CustomObject>